Started adding quasipolinomial normalisation 2

--- a/defs.tex
+++ b/defs.tex
@@ -20,3 +20,13 @@
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
 %-------------------------------------------
+
+%TODO: put this somewhere clever:
+
+
+\newcommand{\avecletter}{{\boldsymbol a}}
+\newcommand{\avec}[2]{\avecletter_{#1}^{#2}}
+\newcommand{\bvecletter}{{\boldsymbol b}}
+\newcommand{\bvec}[2]{\bvecletter_{#1}^{#2}}
+\newcommand{\Ord}[1]{{\mathsf O}(#1)}
+\newcommand{\Gth}[3]{\mathop{\Gammasf_{#1,#2}^{#3}}}
