Made the section on threshold formulae compile

--- a/defs.tex
+++ b/defs.tex
@@ -23,7 +23,7 @@
 
 %TODO: put this somewhere clever:
 
-
+\newcommand{\Gammasf}{\mathsf\Gamma}
 \newcommand{\avecletter}{{\boldsymbol a}}
 \newcommand{\avec}[2]{\avecletter_{#1}^{#2}}
 \newcommand{\bvecletter}{{\boldsymbol b}}
