--- a/formalism.tex
+++ b/formalism.tex
@@ -83,6 +83,9 @@ is unique.
 
 \section{Comparison with the Calculus of Structures}
 
+\newcommand{\size}[1]{{\left\vert #1\right\vert}}\vlupdate\size
+The \emph{size} $\size\alpha$ of a formula $\alpha$, and the \emph{size} $\size\Phi$ of a derivation $\Phi$, is the number of unit and atom occurrences appearing in it.
+
 \begin{theorem}
 Formalism A p-simulates the calculus of structures and the calculus of structures p-simulates Formalism A.
 \end{theorem}
