--- a/thesis.tex
+++ b/thesis.tex
@@ -126,6 +126,7 @@
 \part{Normalisation}
 \input{streamlining.tex}
 \input{cut_elimination.tex}
+\input{threshold.tex}
 \part{Conclusions}
 %\input{chapter9.tex}
 %\part{Appendices}
