--- a/threshold.tex
+++ b/threshold.tex
@@ -90,6 +90,7 @@ For $n>0$, let $\Pi$ be a proof in simple form over $\avec1n$, such that it and 
 (17.75 ,-4  )*{\afaiuex{}{}{}{}{}{}{43}8}}
 \quad,
 \]
+
 for some derivation $\Psi$. For $0\le i\le n+1$, let $\theta_i\equiv\th in\avec1n$. For $0\le k\le n$, we define the derivations $\vlder{\Phi_k}{\SKS\setminus\{\aiu\}}{\vls[\alpha.\theta_{k+1}]}{\theta_k}$ as
 \[ %%%%% The \dimen's must be adjusted if fonts and layout parameters are changed
 \dimen0=2560000sp
@@ -97,7 +98,7 @@ for some derivation $\Psi$. For $0\le i\le n+1$, let $\theta_i\equiv\th in\avec1
 \vlder{\Psi_k}
       {\SKS\setminus\{\aiu\}}
       {\kern-\dimen0\vlsbr[\alpha.
-       \vlinf{\scriptstyle(n-1)\cdot\gcd}
+       \vlinf{\scriptstyle(n-1)\cdot\cod}
              {}
              {\theta_{k+1}}
              {\vls[\vlder{}
