Changed name of Local Tranformations and made two sections
Local and Global Tranformations. Defined the latter.

--- a/thesis.tex
+++ b/thesis.tex
@@ -122,7 +122,7 @@
 \input{flows.tex}
 \input{normal_forms.tex}
 \input{flows_and_derivations.tex}
-\input{local_transformations.tex}
+\input{transformations.tex}
 \part{Normalisation}
 \input{streamlining.tex}
 \input{cut_elimination.tex}
