--- a/transformations.tex
+++ b/transformations.tex
@@ -1,4 +1,6 @@
-\chapter{Local Transformations}
+\chapter{Transformations}
+
+\section{Local Transformations}
 
 \begin{definition}
 In Figure~\ref{FigRed}, we define graphical expressions of the kind $r\colon\phi'\to\psi'$, where $r$ is a name and $\phi'$ and $\psi'$ are flows.
@@ -549,3 +551,19 @@ Flow rewriting system\/ $\frc$ is terminating on the set of cycle-free atomic fl
 \begin{theorem}\label{TheoWCConf}
 Flow rewriting system\/ $\frw\cup\frc$ is confluent.
 \end{theorem}
+
+%======================================
+\section{Global Transformations}
+
+%TODO: explain `copy' better.
+%---------------------------------------
+\begin{definition}
+A \emph{global} (\emph{atomic-flow}) \emph{transformation $r$ from flow $\phi$ to flow $\psi$} is a quadruple $(\phi,\psi,f,g,h)$ such that:
+\begin{enumerate}
+\item $f$ is an injective, partial map from the edges of $\psi$ to the edges of $\phi$, such that for any edges $\epsilon'$ in $\psi$ and $\epsilon$ in $\phi$, if $\epsilon'$ is a \emph{copy} of $\epsilon$ then $f(\epsilon')=\epsilon$,
+\item $g$ is a one-to-one map from the upper edges of $\phi$ to the upper edges of $\psi$, such that for any edges $\epsilon$ of $\phi$ and $\epsilon'$ and $\epsilon''$ of $\psi$ such that $\epsilon$ and $\epsilon''$ are upper edges, $f(\epsilon')=\epsilon$ and there is a path from $\epsilon'$ to $\epsilon''$, then $g(\epsilon)=\epsilon''$,
+\item $h$ is a one-to-one map from the lower edges of $\phi$ to the lower edges of $\psi$, such that for any edges $\epsilon$ of $\phi$ and $\epsilon'$ and $\epsilon''$ of $\psi$ such that $\epsilon$ and $\epsilon''$ are lower edges, $f(\epsilon')=\epsilon$ and there is a path from $\epsilon''$ to $\epsilon'$, then $h(\epsilon)=\epsilon''$,
+\item for every polarity assignment $\pi$ for $\phi$, there is a polarity assignment $\pi'$ for $\psi$ such that $\pi'(g(\epsilon))=\pi(\epsilon)$ and $\pi'(h(\epsilon'))=\pi(\epsilon')$, for any upper edge $\epsilon$ and any lower edge $\epsilon'$ of $\phi$;
+\end{enumerate}
+we define global transformations with graphical expressions $r\colon\phi\to\psi$, where $g$ and $h$ are indicated by labelling edges.
+\end{definition}
