Changed some sections into subsections

--- a/transformations.tex
+++ b/transformations.tex
@@ -273,7 +273,7 @@ The following flow rewriting system is called $\frc$:
 \]
 \end{definition}
 
-\section{Soundness}
+\subsection{Soundness}
 
 %---------------------------------------
 \begin{definition}
@@ -490,7 +490,7 @@ The previous soundness theorem only depends on the switch and medial rules for t
 \end{remark}
 
 
-\section{Non-termination}
+\subsection{Non-termination}
 
 %---------------------------------------
 \begin{remark}\label{RemCycle}
@@ -531,7 +531,7 @@ Flow rewriting system $\frc$ is not terminating:
 We see that if a contraction vertex belongs to an $\ai$-cycle, reductions by $\frc$ make it `bounce' in the $\ai$-cycle and create a trail; while bouncing, the vertex alternates between contraction and cocontraction; if we assign a polarity to the flow, the vertex alternates between being positive and negative.
 \end{remark}
 
-\section{Termination and Confluence}
+\subsection{Termination and Confluence}
 %---------------------------------------
 \begin{theorem}\label{TheoWTerm}
 Flow rewriting system\/ $\frw$ is terminating.
