--- a/defs.tex
+++ b/defs.tex
@@ -19,6 +19,14 @@
 
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
+
+%-------------------------------------------
+
+\newif\ifnonotes\nonotesfalse
+\newcommand{\Ale }[1]{\ifnonotes\else{\color{blue}     \noindent{\bf A: }#1}\fi}
+\newcommand{\TODO}[1]{\ifnonotes\else{\color{red}    \noindent{\bf TODO }#1}\fi}
+%\nonotestrue % If this is commented, notes appear in the paper (if any)
+
 %-------------------------------------------
 
 %TODO: put this somewhere clever:
