--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -220,6 +220,8 @@ A hyper streamlined atomic flow with no upper (resp., lower) edges can be repres
 respectively.
 \end{proposition}
 
+\TODO{Fix definition of simple form (maybe think of a different name?)}
+
 %---------------------------------------
 \begin{definition}
 An atomic flow is \emph{on simple form with respect to the polarity assignment $\pi$} if it can be represented as
