Removed modal logics for now

--- a/thesis.tex
+++ b/thesis.tex
@@ -117,7 +117,7 @@
 \part{Derivations}
 \input{formalism.tex}
 \input{propositional_classical.tex}
-\input{modal.tex}
+%\input{modal.tex}
 \part{Atomic Flows}
 \input{flows.tex}
 \input{normal_forms.tex}
