--- a/transformations.tex
+++ b/transformations.tex
@@ -679,7 +679,7 @@ Flow rewriting system\/ $\frw\cup\frc$ is confluent.
 %======================================
 \section{Global Transformations}
 
-%TODO: explain `copy' better.
+\TODO{Do not define a global transformation, move the restrictions here to the definition of reduction.}
 %---------------------------------------
 \begin{definition}
 A \emph{global} (\emph{atomic-flow}) \emph{transformation $r$ from flow $\phi$ to flow $\psi$} is a quadruple $(\phi,\psi,f,g,h)$ such that:
