--- a/transformations.tex
+++ b/transformations.tex
@@ -689,5 +689,554 @@ A \emph{global} (\emph{atomic-flow}) \emph{transformation $r$ from flow $\phi$ t
 \item $h$ is a one-to-one map from the lower edges of $\phi$ to the lower edges of $\psi$, such that for any edges $\epsilon$ of $\phi$ and $\epsilon'$ and $\epsilon''$ of $\psi$ such that $\epsilon$ and $\epsilon''$ are lower edges, $f(\epsilon')=\epsilon$ and there is a path from $\epsilon''$ to $\epsilon'$, then $h(\epsilon)=\epsilon''$,
 \item for every polarity assignment $\pi$ for $\phi$, there is a polarity assignment $\pi'$ for $\psi$ such that $\pi'(g(\epsilon))=\pi(\epsilon)$ and $\pi'(h(\epsilon'))=\pi(\epsilon')$, for any upper edge $\epsilon$ and any lower edge $\epsilon'$ of $\phi$;
 \end{enumerate}
-we define global transformations with graphical expressions $r\colon\phi\to\psi$, where $g$ and $h$ are indicated by labelling edges.
+we define global transformations with graphical expressions $r\colon\phi\to\psi$, where $g$ and $h$ are indicated by labeling edges.
 \end{definition}
+
+%======================================
+\subsection{Four Boxes}
+
+\newcommand{\frfb}{{\mathsf{fb}}}
+%---------------------------------------
+\begin{definition}\label{DefFourBox}
+\[
+\atomicflow{
+(-8, 6)*{\afvjm4};
+( 0, 8)*{\afaidm{}{}{}{}{}{}};
+( 8, 6)*{\afvjm4};
+%-
+(-5, 0)*{\affr88};
+(-4, 2)*{\aflabelright\phi};
+( 5, 0)*{\affr88};
+( 6, 2)*{\aflabelright\psi};
+%-
+(-8,-6)*{\afvjm4};
+( 0,-8)*{\afaium{}{}{}{}{}{}};
+( 8,-6)*{\afvjm4};
+}
+\quad\to_\frfb\quad
+\atomicflow{
+%left
+(-27, 8)*{\afawdm{}{}{}{}};
+(-19,15)*{\afvjdm6{}{}};
+(-19, 8)*{\afacum{}{}{}{}{}{}};
+(-24, 0)*{\affr88};
+(-20, 2)*{\aflabelleft\phi};
+(-27,-8)*{\afawum{}{}{}{}};
+(-19,-8)*{\afacdm{}{}{}{}{}{}};
+(-19,-15)*{\afvjum6{}{}};
+%top
+(-15,18)*{\afawdm{}{}{}{}};
+( -7,18)*{\afaidnw{}{}};
+( -9,16)*{\afvjm4};
+( -2,15)*{\afcjlm66};
+(-12,10)*{\affr88};
+( -8,12)*{\aflabelleft\phi};
+(-16, 1)*{\afcjrm2{10}};
+( -9, 2)*{\afawum{}{}{}{}};
+%bot
+(-16,-1)*{\afcjlm2{10}};
+( -9,-2)*{\afawdm{}{}{}{}};
+(-12,-10)*{\affr88};
+( -8, -8)*{\aflabelleft\phi};
+( -9,-16)*{\afvjm4};
+( -2,-15)*{\afcjrm66};
+( -7,-20)*{\afaiunw{}{}};
+(-15,-18)*{\afawum{}{}{}{}};
+%center
+(-3, 11)*{\afvjm{14}};
+( 3,  8)*{\afacdm{}{}{}{}{}{}};
+( 7, 12)*{\afaidnw{}{}};
+( 0,  0)*{\affr88};
+( 4,  2)*{\aflabelleft\psi};
+( 7,-14)*{\afaiunw{}{}};
+( 3, -8)*{\afacum{}{}{}{}{}{}};
+(-3,-11)*{\afvjm{14}};
+%right
+(15, 8)*{\afawdm{}{}{}{}};
+( 9, 8)*{\afvjm8};
+(12, 0)*{\affr88};
+(16, 2)*{\aflabelleft\phi};
+( 9,-8)*{\afvjm8};
+(15,-8)*{\afawum{}{}{}{}};
+}
+\]
+\end{definition}
+
+%---------------------------------------
+\begin{theorem}\label{ThFBSound}
+Reduction\/ $\to_\frfb$ is sound.
+\end{theorem}
+
+\TODO{Redo proof to be in line with the rest of the thesis.}
+
+\TODO{Use Formalism A notation.}
+
+\TODO{B -> $\phi$ and A -> $\psi$.}
+
+%---------------------------------------
+\begin{proof}
+For every atom occurence, $a$, which maps to an edge in $B$. We substitute $a$ with the formula $\vls([a_1.a_2].[a_3.a_4])$, where $a=a_1=a_2=a_3=a_4$ and the subscripts denote which of the $B_1,B_2,B_3,B_4$ the atom occurence maps to. Rule instances $\vlinf{\aid}{}{\vls[\bar{a}.a]}{\ttt}$ and $\vlinf{\aiu}{}{\fff}{\vls(\bar{a}.a)}$ are substituted with derivations
+\[
+\vlderivation
+{
+\vlin{\awd\times2}{}{\vls[\bar{a}.([a_1.a_2].[a_3.a_4])]}
+ {
+ \vlin{\acd}{}{\vls[\bar{a}.(a_2.a_4)]}
+  {
+  \vlin{\swi\times2}{}{\vls[\bar{a}.\bar{a}.(a_2.a_4)]}
+   {
+   \vlin{\aid\times2}{}{\vls([\bar{a}.a_2].[\bar{a}.a_4])}
+    {
+    \vlhy{\ttt}
+    }
+   }
+  }
+ }
+}\qquad
+\vlderivation
+{
+\vlin{\aiu\times2}{}{\fff}
+ {
+ \vlin{\swi\times2}{}{\vls[(\bar{a}.a_3).(\bar{a}.a_4)]}
+  {
+  \vlin{\acu}{}{\vls(\bar{a}.\bar{a}.[a_3.a_4])}
+   {
+   \vlin{\awu\times2}{}{\vls(\bar{a}.[a_3.a_4])}
+    {
+    \vlhy{\vls(\bar{a}.[a_1.a_2].[a_3.a_4])}
+    }
+   }
+  }
+ }
+}\quad,
+\]
+respectively. Rule instances $\acd,\acu,\awd,\awu$ which apply to $a$ are substituted with their generic counterparts applied to $\vls([a_1.a_2].[a_3.a_4])$. Finally any occurence of $\vls([a_1.a_2].[a_3.a_4])$ in the premiss or conclusion are substituted with the derivations
+\[
+\vlderivation
+{
+ \vlin{\awd\times2}{}{\vls([a_1.a_2].[a_3.a_4])}
+ {
+  \vlin{\acu}{}{\vls(a_1.a_3)}
+  {
+   \vlhy{a}
+  }
+ }
+}\qquad
+\vlderivation
+{
+ \vlin{\acd}{}{a}
+ {
+  \vlin{\awu\times2}{}{\vls[a_1.a_2]}
+  {
+   \vlhy{\vls([a_1.a_2].[a_3.a_4])}
+  }
+ }
+}\quad,
+\]
+respectively. It is now straightforward to verify that the derivation so obtained has the aforementioned atomic flow and the result follows.
+\end{proof}
+
+
+%======================================
+\subsection{Simple Flow Removal}
+
+\TODO{Change the following definition to be inline with notation and conventions in the rest of the thesis.}
+
+\TODO{Change the definition to show a simple sub flow instead of a simple edge.}
+
+\TODO{Define simple subflow and make sure we use that instead of simple edge elsewhere.}
+
+\newcommand{\frsf}{{\mathsf{sf}}}
+%---------------------------------------
+\begin{definition}\label{DefSimSubRem}
+We define the reduction $\to_\frsf$ (where $\frsf$ stands for \emph{simple flow}) as follows, for every atomic flow $A$:
+\[
+\atomicflow{
+(10,16)*{\afaidnw{}{}};
+( 0,14)*{\afvju4{\epsilon_1}{}};
+( 2,14)*{\cdots};
+( 4,14)*{\afvju4{}{\epsilon_h}};
+( 8,14)*{\afvju4{}\two};
+( 9,10)*{\aflabelleft A};
+( 4, 9)*{\affr{10}6};
+(12,11)*{\afvj{10}};
+( 0, 4)*{\afvjd4{\epsilon'_1}{}};
+( 2, 4)*{\cdots};
+( 4, 4)*{\afvjd4{}{\epsilon'_k}};
+(10, 2)*{\afaiu{}\three{}\one{}{}};
+(-3, 0)*{\invisiblemark};
+(14, 0)*{\invisiblemark}}
+\quad\to_\frsf\quad
+\atomicflow{
+( 0,24   )*{\afvju{16}{\hat\epsilon_1}{}};
+( 2,18   )*{\cdots};
+( 4,24   )*{\afvju{16}{}{\hat\epsilon_h}};
+( 8,18.25)*{\aflabelright{\hat\two}};
+( 9,14   )*{\aflabelleft {\hat A}};
+( 4,13   )*{\affr{10}6};
+( 0, 8.4 )*{\afvjd2{\hat\epsilon'_1}{}};
+( 2, 8   )*{\cdots};
+( 4, 8.4 )*{\afvjd2{}{\hat\epsilon'_k}};
+(12,32   )*{\afvju2{\tilde\epsilon_1}{}};
+(14,32   )*{\cdots};
+(16,32   )*{\afvju2{}{\tilde\epsilon_h}};
+(17,28   )*{\aflabelleft {\tilde A}};
+(12,27   )*{\affr{10}6};
+(12,16   )*{\afvjd{16}{\tilde\epsilon'_1}{}};
+(14,22   )*{\cdots}; 
+(16,16   )*{\afvjd{16}{}{\tilde\epsilon'_k}};
+( 8,22.25)*{\aflabelleft{\tilde\three}};
+( 8,34   )*{\afawd{}{}{\tilde\two}{}};
+( 8,42   )*{\cdots};
+( 6,38   )*{\afacuexsq{}{}{}{}{\epsilon_1}{}31};
+(10,38   )*{\afacuexsq{}{}{}{}{}{\epsilon_h}31};
+( 8,20   )*{\afvj8};
+( 8, 6   )*{\afawu{}{}{}{\hat\three}};
+( 6, 2   )*{\afacdexsq{}{}{}{}{\epsilon'_1}{}31};
+(10, 2   )*{\afacdexsq{}{}{}{}{}{\epsilon'_k}31};
+( 8,-2   )*{\cdots};
+(-3, 0   )*{\invisiblemark};
+(19, 0   )*{\invisiblemark}}
+\quad,
+\]
+where $h,k\ge0$, edges have been renamed with $\hat{\enspace}$ and $\tilde{\enspace}$ accents, flows $\tilde A$ and $\hat A$ are both isomorphic to $A$, and edges $\hat\two$ and $\tilde\three$ are identified.
+\end{definition}
+
+%---------------------------------------
+\begin{theorem}\label{ThSFSound}
+Reduction\/ $\to_\frsf$ is sound.
+\end{theorem}
+
+\TODO{Redo proof to be in line with the rest of the thesis.}
+
+\TODO{Use Formalism A notation.}
+
+\TODO{Define super switch, super switch down and super switch up.}
+
+%---------------------------------------
+\begin{proof}
+Let $\Phi$ be a derivation with flow $B$, such that $B\to_\frsf C$. We show that there exists a derivation $\Psi$ with flow $C$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\ref{DefRedS}. We assume that $\Phi$ has premiss $\xi\{\ttt\}$ and conclusion $\zeta\{\fff\}$, where the evidenced and labelled $\ttt$ and $\fff$ can be traced to the interaction and cointeraction vertices eliminated by $\to_\frsf$, respectively (this can always be done by using switches and unit equations). Intuitively, we can think of $\ttt$ and $\fff$ as mapping to special `unit edges', which can be substituted just like normal edges. So, we assume that $\Phi$ is
+\[
+\vlderivation                                           {
+\vlde{\Phi_3}{}{\zeta\{ \fff\}                 }    {
+\vlin{\aiu  }{}{\zeta'\{ \fff\}                }   {
+\vlde{\Phi_2}{}{\zeta'\vlscn(\bar a^\three.a^\one)}  {
+\vlin{\aid  }{}{\xi'\vlscn[\bar a^\two.a^\one]    } {
+\vlde{\Phi_1}{}{\xi'\{ \ttt\}                  }{
+\vlhy          {\xi\{ \ttt\}                   }}}}}}}
+\quad.
+\]
+We obtain the two derivations $\Psi'$ and $\Psi''$ from $\Phi$ as follows:
+\[
+\Psi'=\;\;
+\vlderivation                                                  {
+\vlde{\Phi_3\{\fff\ot\bar a\}}
+             {}{\zeta\{\bar a^{\tilde\three}\}          }     {
+\vlin{=     }{}{\zeta'\{\bar a^{\tilde\three}\}         }    {
+\vlde{\Phi_2\{a^\one\ot\ttt\}}
+             {}{\zeta'\vlscn(\bar a^{\tilde\three}.\ttt)}   {
+\vlin{\awd  }{}{\xi'\vlscn[\bar a^{\tilde\two}.\ttt]    }  {
+\vlin{=     }{}{\xi'\vlscn[\fff.\ttt]                   } {
+\vlde{\Phi_1}{}{\xi'\{\ttt\}                            }{
+\vlhy          {\xi\{\ttt\}                             }}}}}}}}
+\qquad\hbox{and}\qquad
+\Psi''=\;\;
+\vlderivation                                                                  {
+\vlde{\Phi_3                  }{}{\zeta\{\fff\}                         }     {
+\vlin{=                       }{}{\zeta'\{\fff\}                        }    {
+\vlin{\awu                    }{}{\zeta'\vlscn(\ttt.\fff)               }   {
+\vlde{\Phi_2\{a^\one\ot \fff\}}{}{\zeta'\vlscn(\bar a^{\hat\three}.\fff)}  {
+\vlin{=                       }{}{\xi'\vlscn[\bar a^{\hat\two}.\fff]    } {
+\vlde{\Phi_1\{\ttt\ot\bar a\}}
+                               {}{\xi'\{\bar a^{\hat\two}\}             }{
+\vlhy                            {\xi\{\bar a^{\hat\two}\}              }}}}}}}}
+\quad.
+\]
+Derivation $\Psi'$ has flow $B'$ and $\Psi''$ has $B''$:
+\nopagebreak[4]\bigskip\afnegspace
+\[
+B'=\raise2\atflowelheight\hbox{$
+\atomicflow{
+( 4,14)*{\afvju4{\tilde\epsilon_1}{}};
+( 6,14)*{\cdots};
+( 8,14)*{\afvju4{}{\tilde\epsilon_h}};
+( 0, 4)*{\afvjd4{\tilde\three}{}};
+( 9,10)*{\aflabelleft {\tilde A}};
+( 4, 9)*{\affr{10}6};
+( 4, 4)*{\afvjd4{\tilde\epsilon'_1}{}};
+( 6, 4)*{\cdots};
+( 8, 4)*{\afvjd4{}{\tilde\epsilon'_k}};
+( 0,16)*{\afawd{}{}{\tilde\two}{}};
+(-2, 4)*{\invisiblemark};
+(11, 4)*{\invisiblemark}}$}
+\qquad\hbox{and}\qquad
+B''=\lower2\atflowelheight\hbox{$
+\atomicflow{
+( 0,14)*{\afvju4{\hat\epsilon_1}{}};
+( 2,14)*{\cdots};
+( 4,14)*{\afvju4{}{\hat\epsilon_h}};
+( 8,14)*{\afvju4{}{\hat\two}};
+( 9,10)*{\aflabelleft {\hat A}};
+( 4, 9)*{\affr{10}6}; 
+( 0, 4)*{\afvjd4{\hat\epsilon'_1}{}};
+( 2, 4)*{\cdots};
+( 4, 4)*{\afvjd4{}{\hat\epsilon'_k}};
+( 8, 2)*{\afawu{}{}{}{\hat\three}};
+(-3, 4)*{\invisiblemark}}$}
+\quad.
+\]
+\afnegspace
+We combine $\Psi'$ and $\Psi''$ to get the desired derivation $\Psi$ with flow $C$ and the same premiss and conclusion as $\Phi$:
+\[
+\Psi=\;\;
+\vlderivation                                                              {
+\vlin{\cod                      }{}{\zeta\{\fff\}                    }    {
+\vlde{\vls[\Psi''.\zeta\{\fff\}]}{}{\vls[\zeta\{\fff\}.\zeta\{\fff\}]}   {
+\vlin{\swi                      }{}{\vls[\xi\{\bar a\}.\zeta\{\fff\}]}  {
+\vlde{\vls(\xi\{\ttt\}.\Psi')   }{}{\vls(\xi\{\ttt\}.\zeta\{\bar a\})} {
+\vlin{\cou                      }{}{\vls(\xi\{\ttt\}.\xi\{\ttt\})    }{
+\vlhy                              {\xi\{\ttt\}                      }}}}}}}
+\quad,
+\]
+where $\swi$, $\cod$ and $\cou$ are `macro' rules introduced in Remarks~\ref{RemSupSwitch} and \ref{RemGenContr}.
+\end{proof}
+
+%======================================
+\subsection{Path Breaker}
+
+\TODO{Import from AFII when the paper is final.}
+
+\TODO{Consider changing into the style of simple flow remover above: first define a reduction on atomic flows then show it is sound. It fits better with the message of the thesis.}
+
+\newcommand{\Break}{\mathsf{Break}}
+\begin{definition}\label{DefPathBreak}
+The \emph{path breaker}, $\Break$, is an operator whose arguments are a derivation $\vlder{\Phi}{}{\beta}{\alpha}$ and the atom occurrences $a^\lambda$ and $a^\mu$, such that $\alpha=\vlsmallbrackets\vls([a^\lambda.\bar a].\gamma)$, $\beta=\vls[\delta.(a^\mu.\bar a)]$, and the results are a derivation and two atom occurrences $a^\epsilon$ and $a^\iota$ such that $\Break(\Phi,a^\lambda,a^\mu)=(\Psi,a^\epsilon,a^\iota)$, where:
+\newbox\DeltaTopK
+\setbox\DeltaTopK=
+\hbox{$
+\vlderivation
+{
+ \vlin{=}{}{\vls[\delta.(\vlinf{}{}{\ttt}{a^{\mu'}}.\bar a)]}
+ {
+  \vlde{\Phi}{}{\beta}
+  {
+   \vlhy{\alpha}
+  }
+ }
+}$
+}
+\newbox\DeltaK
+\setbox\DeltaK=
+\hbox{$
+\vlderivation
+{
+ \vlin{=}{}{\vls[\delta.(a^{\epsilon'}.\vlinf{}{}{\ttt}{\bar a})]}
+ {
+  \vlde{\Phi}{}{\beta}
+  {
+   \vlin{=}{}{\alpha}
+   {
+    \vlhy{\vls([\vlinf{}{}{a^{\lambda'}}{\fff}.\bar a].\gamma)}
+   }
+  }
+ }
+}$
+}
+\newbox\DeltaBotK
+\setbox\DeltaBotK=
+\hbox{$
+\vlderivation
+{
+ \vlde{\Phi}{}{\beta}
+ {
+  \vlin{=}{}{\alpha}
+  {
+   \vlhy{\vls([a^{\epsilon'}.\vlinf{}{}{\bar a}{\fff}].\gamma)}
+  }
+ }
+}$
+}
+\[
+\Psi\quad=\quad
+\vlderivation
+{
+ \vlin{=}{}{\vls[\vlinf{2\cdot\cod}{}{\delta}{\vls[\delta.\delta.\delta]}\;.\;(a^\iota.\bar a)]}
+ {
+  \vlin{=}{}{\vlsbr[\delta\;\;\;.\;\;\;\delta\;\;\;.\;\;\;\box\DeltaBotK]}
+  {
+   \vlin{\swi}{}{\vlsmallbrackets\vls[(\gamma.a^{\epsilon'}).[\delta.\delta]]}
+   {
+    \vlin{=}{}{\vlsmallbrackets\vls(\gamma.[a^{\epsilon'}.[\delta.\delta]])}
+    {
+     \vlin{=}{}{\vlsbr([\delta\;\;\;\;\;.\;\;\;\;\;\box\DeltaK]\;\;\;\;\;.\;\;\;\;\;\gamma)}
+     {
+      \vlin{=}{}{\vls(\vlinf{\swi}{}{\vls[(\gamma.\bar a).\delta]}{\vls(\gamma.[\bar a.\delta])}\;.\;\gamma)}
+      {
+       \vlin{=}{}{\vlsbr(\box\DeltaTopK\;\;\;.\;\;\;\gamma\;\;\;.\;\;\;\gamma)}
+       {
+        \vlhy{\vls([a^\epsilon.\bar a]\;.\;\vlinf{2\cdot\cou}{}{\vls(\gamma.\gamma.\gamma)}{\gamma})}
+       }
+      }
+     }
+    }
+   }
+  }
+ } 
+}\quad,
+\]
+where $\epsilon$, $\lambda'$ and $\epsilon'$ correspond to $\lambda$ and $\mu'$, $\epsilon'$ and $\iota$ correspond to $\mu$ in the atomic flow of $\Phi$.
+\end{definition}
+
+\begin{proposition}\label{PropPathBreak}
+If, for some flows $\phi$ and $\psi$, the atomic flow of $\vlder{\Phi}{}{\vlsmallbrackets\vls[\beta.(a^{\mu}.\bar a^{\mu'})]}{\vlsmallbrackets\vls([a^{\lambda}.\bar a^{\lambda'}].\alpha)}$ is of shape
+\[
+\atomicflow
+{
+(-8, 6)*{\afvjm{4}};
+(-2, 6)*{\afvju{4}{\lambda}{}};
+( 2, 6)*{\afvju{4}{}{\lambda'}};
+( 8, 6)*{\afvjm{4}};
+(-5, 0)*{\affr{8}{8}};
+(-4, 2)*{\aflabelright\phi};
+%---
+( 5, 0)*{\affr{8}{8}};
+( 6, 2)*{\aflabelright{\psi}};
+( 8,-6)*{\afvjm{4}};
+(-2,-6)*{\afvjd{4}{\mu}{}};
+( 2,-6)*{\afvjd{4}{}{\mu'}};
+(-8,-6)*{\afvjm{4}};
+}\quad,
+\]
+and if\/ $\Break(\Phi,a^\lambda,a^\mu)=\left(\vlder{\Psi}{}{\beta}{\alpha},a^\epsilon,a^\iota\right)$, where $\alpha=\vlsmallbrackets\vls([a^\epsilon.\bar a^{\epsilon'}].\gamma)$ and $\beta=\vlsmallbrackets\vls[\delta.(a^\iota.\bar a^{\iota'})]$, then
+\begin{itemize}
+	\item there are no paths from $\epsilon$ to $\iota$ and no paths from $\epsilon'$ to $\iota'$ in the atomic flow of\/ $\Psi$; and
+	\item there are no paths from an upper path $\epsilon''$ to a lower path $\iota''$ in the atomic flow of $\Psi$ unless there is a path from the corresponding upper path $\lambda''$ to the lower path $\mu''$ in the atomic flow of $\Phi$.
+\end{itemize}
+\end{proposition}
+
+\begin{figure}
+\[
+\atomicflow
+{
+(-8, 6)*{\afvjm{4}};
+(-2, 6)*{\afvju{4}{\lambda}{}};
+( 2, 6)*{\afvju{4}{}{\lambda'}};
+( 8, 6)*{\afvjm{4}};
+(-5, 0)*{\affr{8}{8}};
+(-4, 2)*{\aflabelright\phi};
+%---
+( 5, 0)*{\affr{8}{8}};
+( 6, 2)*{\aflabelright{\psi}};
+( 8,-6)*{\afvjm{4}};
+(-2,-6)*{\afvjd{4}{\mu}{}};
+( 2,-6)*{\afvjd{4}{}{\mu'}};
+(-8,-6)*{\afvjm{4}};
+}\qquad\qquad
+\atomicflow
+{
+%%%%% RED %%%%%
+(0,-20)="D";
+(0,-10)="Dhalf";
+%% contractions
+"D"+"D"="A";
+%left
+"A"+(-14,-15.5)-"D"*{\afvjmcol{23}{Red}};
+"A"+(-11,-16.5)*{\afvjmcol{3}{Red}};
+%right
+"A"+(11,-11.5)-"Dhalf"*{\afvjmcol{11}{Red}};
+"A"+(14,-15.5)-"D"*{\afvjmcol{23}{Red}};
+"A"+(11,-16.5)*{\afvjmcol{3}{Red}};
+% top boxes
+(0,0)="A";
+"A"+(-11,-14)*{\afcjrmcol{6}{20}{Red}};
+"A"+(11,-14)*{\afcjlmcol{6}{20}{Red}};
+"A"+(-2, 11)*{\afvjdcol{14}{\epsilon}{}{Red}};
+"A"+( 2, 11)*{\afvjdcol{14}{}{\epsilon'}{Red}};
+"A"+(-2, -8)*{\afawucol{}{}{\mu}{}{}{Red}};
+% join one
+"A"+(2,-7)*{\afvjdcol6{}{\mu'}{Red}};
+"A"+(2,-13)*{\afvjucol6{}{\lambda'}{Red}};
+% middle boxes
+"A"+"D"="A";
+"A"+(9.5,-10)*{\afcjlmcol{3}{12}{Red}};
+"A"+( 2,-8)*{\afawucol{}{}{}{\mu'}{}{Red}};
+%%%%% GREEN %%%%%
+%% cocontractions
+(0,0)="A";
+%left
+"A"+(-11,16.5)*{\afvjmcol{3}{OliveGreen}};
+"A"+"D"+(-14,15.5)*{\afvjmcol{23}{OliveGreen}};
+"A"+"Dhalf"+(-11,11.5)*{\afvjmcol{11}{OliveGreen}};
+%right
+"A"+(11,16.5)*{\afvjmcol{3}{OliveGreen}};
+"A"+"D"+(14,15.5)*{\afvjmcol{23}{OliveGreen}};
+% middle boxes
+"A"+"D"="A";
+"A"+(-9.5,10)*{\afcjlmcol{3}{12}{OliveGreen}};
+"A"+(-2, 8)*{\afawdcol{}{}{\lambda}{}{}{OliveGreen}};
+% join two
+"A"+(-2, -7)*{\afvjdcol6{\mu}{}{OliveGreen}};
+"A"+(-2,-13)*{\afvjucol6{\lambda}{}{OliveGreen}};
+% bottom boxes
+"A"+"D"="A";
+"A"+(-11,14)*{\afcjlmcol{6}{20}{OliveGreen}};
+"A"+(11,14)*{\afcjrmcol{6}{20}{OliveGreen}};
+"A"+(-2,-11)*{\afvjucol{14}{\iota}{}{OliveGreen}};
+"A"+( 2,-11)*{\afvjucol{14}{}{\iota'}{OliveGreen}};
+"A"+( 2, 8)*{\afawdcol{}{}{}{\lambda'}{}{OliveGreen}};
+%%%%% BLACK %%%%%
+%% cocontractions
+(0,0)="A";
+%left
+"A"+(-8,5.5)*{\afvjm3};
+"A"+(-11,11)*{\affr88};
+"A"+(-11,11)*{\copy\contrup};
+%right
+"A"+(8,5.5)*{\afvjm3};
+"A"+"Dhalf"+(11,11.5)*{\afvjm{11}};
+"A"+(11,11)*{\affr88};
+"A"+(11,11)*{\copy\contrup};
+%% contractions
+"D"+"D"="A";
+%left
+"A"+(-11,-11.5)-"Dhalf"*{\afvjm{11}};
+"A"+(-8,-5.5)*{\afvjm3};
+"A"+(-11,-11)*{\affr88};
+"A"+(-11,-11)*{\copy\contrdown};
+%right
+"A"+(8,-5.5)*{\afvjm3};
+"A"+(11,-11)*{\affr88};
+"A"+(11,-11)*{\copy\contrdown};
+% top boxes
+(0,0)="A";
+"A"+(-5,  0)*{\affr{8}{8}};
+"A"+(-4,  2)*{\aflabelright{\phi}};
+"A"+( 5,  0)*{\affr{8}{8}};
+"A"+( 6,  2)*{\aflabelright{\psi}};
+% middle boxes
+"A"+"D"="A";
+"A"+(9.5,10)*{\afcjrm{3}{12}};
+"A"+(-9.5,-10)*{\afcjrm{3}{12}};
+"A"+(-5, 0)*{\affr{8}{8}};
+"A"+(-4, 2)*{\aflabelright{\phi}};
+"A"+( 5, 0)*{\affr{8}{8}};
+"A"+( 6, 2)*{\aflabelright{\psi}};
+% bottom boxes
+"A"+"D"="A";
+"A"+(-5, 0)*{\affr{8}{8}};
+"A"+(-4, 2)*{\aflabelright{\phi}};
+"A"+( 5, 0)*{\affr{8}{8}};
+"A"+( 6, 2)*{\aflabelright{\psi}};
+}
+\]
+\caption{The atomic flows of $\Phi$ (left) and $\Psi$ (right) such that $\Break(\Phi,a^\lambda,a^\mu)=(\Psi,a^\epsilon,a^\iota)$.}
+\label{FigFlowBreak}
+\end{figure}
+
+\begin{proof}
+Refer to the atomics in Figure~\ref{FigFlowBreak}.
+\begin{itemize}
+	\item All the edges that might be in paths from $\epsilon$ or $\epsilon'$ are coloured in red and all the edges that might be in paths to $\iota$ or $\iota'$ are coloured in green. Since the red and the green paths do not overlap, there are no paths from $\epsilon$ to $\iota$ and no paths from $\epsilon'$ to $\iota'$; and
+	\item If there is a path from an upper edge $\epsilon''$ to a lower edge $\mu''$ in the atomic flow of $\Psi$ the path must pass through one of the three copies of either $\phi$ or $\psi$, hence there must be a path from the corresponding upper edge $\lambda''$ to the corresponding lower edge $\mu''$ in the atomic flow of $\Phi$.
+\end{itemize}
+\end{proof}
