Added TODO's to the Flows section

--- a/flows.tex
+++ b/flows.tex
@@ -24,6 +24,8 @@ We call the following six diagrams (\emph{atomic-flow}) \emph{labels}:
 \]
 \end{definition}
 
+\TODO{Make sure the symbols we use later are all defined here. In particular we need $\iota$ to denote edges, maybe also more.}
+
 \newcommand{\ppl  }{{\mathchoice{\scriptstyle+}
                                 {\scriptstyle+}
                                 {\scriptstyle+}
@@ -71,7 +73,7 @@ An (\emph{atomic}) \emph{flow} is a tuple $(V,E,\eta,\up,\lo)$, denoted $\phi$ o
 Given an atomic flow $\phi$, we say that the sets $L_\top=\{\epsilon_1,\dots,\epsilon_h\}$ and $U_\bot=\{\epsilon'_1,\dots,\epsilon'_k\}$ contain, respectively, the \emph{upper} and \emph{lower edges of $\phi$}.
 \end{definition}
 
-%TODO: explain the use of colors and small numerals
+\TODO{Explain the use of colors and small numerals.}
 
 \newcommand{\one  }{{\mathchoice{\scriptstyle\mathbf1}
                                 {\scriptstyle\mathbf1}
@@ -109,3 +111,11 @@ Given an atomic flow $\phi$, we say that the sets $L_\top=\{\epsilon_1,\dots,\ep
                                 {\scriptstyle\mathbf9}
                                 {\scriptstyle\mathbf9}
                                 {\scriptscriptstyle\mathbf9}}}
+
+\TODO{Make sure we define atomic flows to be unique modulo associativity of contraction.}
+
+\TODO{Define \emph{paths}, \emph{$\aid$-paths} and `\emph{super paths}'.}
+
+\TODO{Define connected component.}
+
+\TODO{Define subflow}.
