Fixed definition of `simple form'

--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -220,26 +220,32 @@ A hyper streamlined atomic flow with no upper (resp., lower) edges can be repres
 respectively.
 \end{proposition}
 
-\TODO{Fix definition of simple form (maybe think of a different name?)}
+\TODO{Maybe think of a different name than `simple form' (it doesn't look very simple...).}
 
 %---------------------------------------
 \begin{definition}
 An atomic flow is \emph{on simple form with respect to the polarity assignment $\pi$} if it can be represented as
 \[
 \atomicflow{
-(-14, 14)*{\afvjm4};
+(-21, 14)*{\afvjm4};
+(-21,  8)*{\affr88};
+(-22, 10)*{\aflabelleft{\ppl}};
+%-
+(-24,  0)*{\afvjm8};
+%-
+(-21, -8)*{\affr88};
+(-22, -6)*{\aflabelleft{\ppl}};
+(-21,-14)*{\afvjm4};
+%-
 ( -6, 16)*{\afaidm{}{}{}{}{}{}};
 ( -4,  8)*{\afvjm8};
 (-11,  8)*{\affr88};
 (-12, 10)*{\aflabelleft{\ppl}};
 (-16,  0)*{\afcjrm48};
-(-18,-10)*{\afvjm{12}};
 %-
-(-18, 10)*{\afvjm{12}};
 (-16,  0)*{\afcjlm48};
 (-11, -8)*{\affr88};
 (-12, -6)*{\aflabelleft{\ppl}};
-(-14,-14)*{\afvjm4};
 ( -4, -8)*{\afvjm8};
 ( -6,-16)*{\afaium{}{}{}{}{}{}};
 %--
